# universal-spawn

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .mailmap  .markdownlint.json  .prettierrc  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md  SUPPORT.md  awesome-spawn-projects.md  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/DISCUSSION_TEMPLATE/: question.yml  rfc.yml  show_and_tell.yml
.github/workflows/: release.yml  (+7 more)
assets/: README.md
best-practices/: README.md  abuse-prevention.md  accessibility.md  i18n-and-localization.md  metadata-patterns.md  migration-strategy.md  monetization.md  multi-platform-strategy.md  naming-conventions.md  observability-logging.md  platform-perks.md  rate-cost-limits.md  secrets-and-permissions.md  trust-model.md  versioning.md
design/: residual-frequencies.md
docs/: README.md  faq.md  field-reference.md  for-creators.md  for-platforms.md  getting-started.md  grok-compat.md  quickstart.md  safety-model.md  validation.md
ecosystem/: README.md  case-studies.md  claude-integration.md  discord-integration.md  gemini-integration.md  github-integration.md  grok-integration.md  openai-integration.md  partners.md  vercel-integration.md
examples/: README.md  ai-agent.spawn.yaml  creative-tool.spawn.yaml  cross-platform.spawn.yaml  full.spawn.yaml  game-mod.spawn.yaml  hardware-device.spawn.yaml  minimal.spawn.yaml  web-app.spawn.yaml
marketing/: launch-package.md
scripts/: build_ai_platforms.py  build_hosting_platforms.py  build_s4_platforms.py  gen_ai_platform.py  gen_hosting_platform.py  gen_session4.py  validate.py  validate_ai_platforms.py  validate_hosting_platforms.py  validate_s4_platforms.py  validate_templates.py
spec/: README.md  versioning.md
templates/: README.md
templates/cli-tool-python/: README.md  pyproject.toml  universal-spawn.yaml
templates/pypi-package/: README.md  pyproject.toml  universal-spawn.yaml
universal/: README.md  aliases.md  cheatsheet.md  universal-spawn.json  universal-spawn.toml  universal-spawn.yaml
validators/: README.md
validators/cli/python/: README.md  pyproject.toml
validators/cli/python/src/universal_spawn/: __init__.py  cli.py  validator.py
validators/cli/python/tests/: test_validator.py
(+287 files in other folders)
